objects/Case.object
<CustomObject>
    <fields>
        <fullName>Accountshipping_city__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accountshipping city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT__c</fullName>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_ExternalId__c</fullName>
        <label>Case_ExternalId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataextractionrequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dataextractionrequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark cases that are closed on first contact, without requiring additional engagement with the customer. Off by default. Driven by workflow rule</description>
        <label>First Contact Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orgdetails__c</fullName>
        <label>Orgdetails</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>org1</fullName>
                </value>
                <value>
                    <fullName>org2</fullName>
                </value>
                <value>
                    <fullName>org3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCQW__Status_Indicator__c</fullName>
        <formula>IMAGE(CASE(Status , 
&quot;New&quot;,&quot;/resource/PCQW__CaseNew&quot;,
&quot;Closed&quot;,&quot;/resource/PCQW__CaseClosed&quot;,
&quot;Escalated&quot;,&quot;/resource/PCQW__CaseEscalated&quot;, 
&quot;Working&quot;,&quot;/resource/PCQW__CaseWorking&quot;, 
&quot;/resource/PCQW__CaseNew&quot;), &quot;Status&quot;,22,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_KB__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Laptops</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>Phones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <description>Created for use by Service Wave to segment cases by SLA. Entitlements field now accessible to Wave.</description>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Searchstringsample__c</fullName>
        <label>Searchstringsample</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Searchstringvalue_check</fullName>
        <active>true</active>
        <description>this will prevent salesforce.com email id</description>
        <errorConditionFormula>AND(Not(ISBLANK(Searchstringsample__c)), OR(
(CONTAINS((LOWER(Searchstringsample__c )) ,&quot;salesforce&quot;))))</errorConditionFormula>
        <errorDisplayField>Searchstringsample__c</errorDisplayField>
        <errorMessage>Please change search string because it is having internal Salesforce email id</errorMessage>
    </validationRules>
</CustomObject>